2002-07-13  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* configure.in: Treat warnings as errors.
	* src/Makefile.am: Removed regex.[ch]. Old version, use distro instead.
	* src/gtksourcebuffer.c: (read_loop):
	* src/gtksourcetag.c:
	* src/gtksourceview.c: (gtk_source_view_expose),
	(gtk_source_view_new):
	* src/gtktextsearch.c: (gtk_text_search_finalize):
	* src/regex.c: Removed.
	* src/regex.h: Removed.
	* src/test-widget.c:

	Fix all warnings.

2002-07-13  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* src/test-widget.c: (test_source): Fix test-widget segfault.

2002-07-12  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* aclocal.m4: Obsolete.
	* src/gtksourcebuffer.c: (check_embedded): Fix unitialized GtkTextIter.
	* src/gtksourcetag.c: (gtk_embedded_tag_new): Fix correct instance type.

2002-07-12  JP Rosevear  <jpr@ximian.com>

	* src/gtktextsearch.h: remove extraneous characters

2002-07-11  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* src/test-widget.c: (test_source): Fix method call.

2002-07-04  Mikael Hermansson  <tyan@linux.se>

	* src/gtksourcebuffer.[c/h] (gtk_source_buffer_[load/save]_*),
	code cleanup and improved error handling using GError.

2002-05-22  Mikael Hermansson  <tyan@linux.se>

	* src/gtksourcebuffer.c: (gtk_source_buffer_real_delete_range), 
	fix bug that made it impossible to remove syntax embended text. 
	(reported by Mario Motta <mmotta@guest.net>)

2002-03-31  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* src/gtksourcebuffer.c: (gtk_source_buffer_get_undo_levels),
	(gtk_source_buffer_set_undo_levels): Add undo_levels property.
	* src/gtksourcebuffer.h: Idem.
	* src/gtksourceview.c: (gtk_source_view_expose),
	(gtk_source_view_set_show_line_numbers),
	(gtk_source_view_set_show_line_pixmaps): Fix bug where margin would
	still be visible even though both the line numbers & pixmaps were off.
	* src/gtkundomanager.c: (gtk_undo_manager_get_undo_levels),
	(gtk_undo_manager_set_undo_levels): Add undo_levels property.
	* src/gtkundomanager.h: Idem.